# IOCTLDump

./: .gitignore  IOCTLDump.sln  README.md  design.txt  design2.txt
IOCTLDump/: IOCTLDump.h  IOCTLDump.inf  IOCTLDump.vcxproj  IOCTLDump.vcxproj.filters  IOCTLDump_Kern.h  Main.cpp
IOCTLDump/x64/Debug/: IOCTLDump.inf
IOCTLDump/x64/Debug/IOCTLDump.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  IOCTLDump.lastbuildstate  IOCTLDump.write.1u.tlog  Inf2Cat.command.1.tlog  inf2cat-expand.10768.read.1.tlog  inf2cat-expand.10976.read.1.tlog  inf2cat-expand.10976.write.1.tlog  (+47 more)
IOCTLDump/x64/Release/: IOCTLDump.inf
IOCTLDumpClient/: IOCTLDumpClient.cpp  IOCTLDumpClient.vcxproj  IOCTLDumpClient.vcxproj.filters  ntdll.h
IOCTLDumpClient/x64/Debug/: IOCTLDumpClient.nativecodeanalysis.sarif  IOCTLDumpClient.nativecodeanalysis.xml  NativeCodeAnalysis.read.1.tlog  vc.nativecodeanalysis.all.xml  vc142.idb
IOCTLFuzz_Radamsa/: IOCTLFuzz_Radamsa.cpp  IOCTLFuzz_Radamsa.vcxproj  IOCTLFuzz_Radamsa.vcxproj.filters
IOCTLFuzz_Radamsa/x64/Debug/: IOCTLFuzz_Radamsa.nativecodeanalysis.sarif  IOCTLFuzz_Radamsa.nativecodeanalysis.xml  vc142.idb
ioctl_replayer/: Cargo.toml
ioctl_replayer/src/: main.rs
x64/Debug/: IOCTLDump.inf  IOCTLDump.sys  IOCTLFuzz_Radamsa.ilk
x64/Debug/IOCTLDump/: IOCTLDump.inf  IOCTLDump.sys  ioctldump.cat
x64/Release/: IOCTLDump.cer  IOCTLDump.sys  IOCTLDumpClient.exe.i64  IOCTLDumpClient.iobj  IOCTLDumpClient.ipdb  IOCTLFuzz_Radamsa2.iobj  IOCTLFuzz_Radamsa2.ipdb
x64/Release/IOCTLDump/: IOCTLDump.inf  ioctldump.cat
(+54 files in other folders)
